[gd_scene load_steps=8 format=3 uid="uid://xyyuqu4gxd2t"]

[ext_resource type="PackedScene" uid="uid://bvnh656bbcyon" path="res://Scenes/CombatScenes/mini_enemy.tscn" id="1_cj3a0"]
[ext_resource type="Script" path="res://Scripts/Combat/mini_enemy_plant.gd" id="2_fe4fv"]
[ext_resource type="Texture2D" uid="uid://cjgkuwst0o8ld" path="res://icon.svg" id="3_oro16"]
[ext_resource type="Texture2D" uid="uid://cbw5wne2m26yt" path="res://Assets/Sprite-0001.png" id="4_mmmj8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8ahe"]
size = Vector2(126, 126)

[sub_resource type="Animation" id="Animation_kp8bq"]
resource_name = "whipAttack"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WhipAttack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WhipAttack/Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(2.54912, 1),
"update": 0,
"values": [1.5708, -2.61799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WhipAttack/Node2D/WhipSprite/WhipHitbox/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vdbn3"]
_data = {
"whipAttack": SubResource("Animation_kp8bq")
}

[node name="miniEnemy" instance=ExtResource("1_cj3a0")]
script = ExtResource("2_fe4fv")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_oro16")

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_g8ahe")

[node name="SpreadTimer" type="Timer" parent="." index="4"]
wait_time = 4.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_vdbn3")
}

[node name="WhipAttack" type="Node2D" parent="." index="6"]
visible = false
position = Vector2(80, 700)
scale = Vector2(10, 10)

[node name="Node2D" type="Node2D" parent="WhipAttack" index="0"]
position = Vector2(-7.7, -63)
rotation = -2.61799
scale = Vector2(1, 1)

[node name="WhipSprite" type="Sprite2D" parent="WhipAttack/Node2D" index="0"]
position = Vector2(7.7, 63.2)
texture = ExtResource("4_mmmj8")

[node name="WhipHitbox" type="Area2D" parent="WhipAttack/Node2D/WhipSprite" index="0"]
position = Vector2(55.3, -70.9)
rotation = -1.5708
scale = Vector2(1, 1)
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WhipAttack/Node2D/WhipSprite/WhipHitbox" index="0"]
position = Vector2(7.62939e-07, -6.10352e-06)
polygon = PackedVector2Array(-115.9, -65.6, -108.1, -71.6, -101.1, -76.7, -92.8, -82.2, -82.1, -85.6, -73.8, -86.9, -55.5, -86.9, -36.6, -82, -19, -73.2, -7.5, -65.6, -7.3, -59.8, -13, -64.8, -23.2, -70.7, -35.8, -75.8, -45.1, -79.8, -53.6, -81.6, -62.1, -83, -77, -82.8, -92.3, -78.1, -109.8, -65.6, -115.1, -62.8)
disabled = true

[node name="WhipTimer" type="Timer" parent="." index="7"]
wait_time = 5.0

[connection signal="timeout" from="SpreadTimer" to="." method="_on_spread_timer_timeout"]
[connection signal="body_entered" from="WhipAttack/Node2D/WhipSprite/WhipHitbox" to="." method="_on_whip_hitbox_body_entered"]
[connection signal="timeout" from="WhipTimer" to="." method="_on_whip_timer_timeout"]
